# deep_forest_py310

./: .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  build-wheels.yml  code-quality.yml  manual-release.yml
build_tools/: requirements.txt
deepforest/: _binner.py  _estimator.py  _io.py  _layer.py  _utils.py  cascade.py  forest.py
deepforest/tree/: _tree.pyx  tree.py
deepforest/utils/: kfoldwrapper.py
tests/: test_forest.py  test_layer_estimator.py  test_model_regressor.py  test_set_custom_estimator.py  test_tree regressor.py  test_tree_same.py
