[build-system]
requires = [
    "setuptools>=61,<70",
    "wheel",
    "numpy==1.26.4",
    "Cython>=0.28.5,<3.0",
    "oldest-supported-numpy",
    "scipy>=1.3.2",
]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
