[build-system]
requires = [
    "setuptools>=61,<70",
    "wheel",
    "numpy>=2.1.1,<3",
    "Cython>=3.0,<3.1",
    "oldest-supported-numpy",
    "scipy>=1.3.2",
]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
